feat(reset_password): added feature to reset password along with swagger documentation and logging.
Signed-off-by: Vinay2080 <shaking.121@gmail.com>