@@ -21,8 +21,9 @@ import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class SessionServiceImplTest {
@@ -73,7 +74,7 @@ class SessionServiceImplTest {
         var result = sessionService.getSessionsForUser(userId);
 
         assertEquals(1, result.size());
-        assertEquals("d1", result.get(0).deviceId());
+        assertEquals("d1", result.getFirst().deviceId());
     }
 
     @Test
